app-mesh/mesh_component/hello_placeholder_services.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  labels:
    app: hello
spec:
  ports:
  - port: 8000
    name: http
